--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -348,6 +348,8 @@ ja: # locale
     batch_transfers:
       errors_found: "以下のエラーが発生しています。"
 
+  minmarks_cant_be_blank: "Minimum Mark can't be blank"
+  maxmarks_cant_be_blank: "Maximum Mark can't be blank"
   sl_no: "Sl 番号"
   are_you_sure_to_trnsfer: "All the students will be transferred to the batch"
   system_settings: "System Settings"
