--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -374,6 +374,8 @@ en: # locale
   batch: "Batch"
   delete_text: "Delete"
   admission_number: "Admission number"
+  minmarks_cant_be_blank: "Minimum Mark can't be blank"
+  maxmarks_cant_be_blank: "Maximum Mark can't be blank"
   all: "All"
   select: "Select"
   option: "Option"
