--- a/config/locales/mr.yml
+++ b/config/locales/mr.yml
@@ -348,6 +348,8 @@ mr: # locale
     batch_transfers:
       errors_found: "खालील त्रूटी आढळल्या"
 
+  minmarks_cant_be_blank: "Minimum Mark can't be blank"
+  maxmarks_cant_be_blank: "Maximum Mark can't be blank"
   sl_no: "अनु. क्रम."
   are_you_sure_to_trnsfer: "All the students will be transferred to the batch"
   system_settings: "System Settings"
