[FIXES BUG #3736]-overlapping in timetable
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3948 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -1861,6 +1861,7 @@ ar:
   select_a_tte: "حدد جدولا زمنيا"
   basestart_date_overlap: "وقت البدء هو ضمن مجموعة من آخر جدول زمني"
   baseend_date_overlap: "وقت النهاية هو ضمن مجموعة من آخر جدول زمني"
+  basetimetable_in_between_given_dates: "آخر موجود في الجدول الزمني بين تواريخ معينة"
   basestart_date_is_lower_than_today: "تاريخ البدء أقل من تاريخ اليوم"
   basestart_date_is_lower_than_end_date: "تاريخ انتهاء أقل من تاريخ بدء"
   baseend_date_is_lower_than_today: "تاريخ انتهاء أقل من تاريخ اليوم"
