--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -1860,6 +1860,7 @@ pt: # locale
   select_a_tte: "Selecione um calendário"
   basestart_date_overlap: "Hora de início está dentro da faixa de um outro calendário"
   baseend_date_overlap: "término está dentro da faixa de um outro calendário"
+  basetimetable_in_between_given_dates: "Outro calendário existe entre as datas indicadas"
   basestart_date_is_lower_than_today: "inicio é menor que a data de hoje"
   basestart_date_is_lower_than_end_date: "Data final é menor que a data inicial"
   baseend_date_is_lower_than_today: "Data final é menor do que a data de hoje"
