--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -1366,6 +1366,7 @@ hi:
   password_is: "और पासवर्ड है"
   select_one_of_the_guardians: "एक आपातकालीन संपर्क के रूप में संरक्षक के का चयन करें|"
   max_size: "500KB अधिकतम"
+  height_width: "150x110"
   unknown: "अज्ञात"
   student_detail_step1: "चरण 1 - छात्र विवरण"
   last_course: "अंतिम भाग लिया कोर्स"
