--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1395,6 +1395,7 @@ ja: # locale
   password_is: "パスワードは"
   select_one_of_the_guardians: "保護者を一人選択し、緊急連絡先を設定"
   max_size: "最大500KBまで"
+  height_width: "150x110"
   unknown: "不明"
   student_detail_step1: "ステップ 1 - 生徒詳細"
   last_course: "前回のコース"
