--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -1391,6 +1391,7 @@ pt: # locale
   password_is: "e a senha é"
   select_one_of_the_guardians: "Selecionar um dos responsaveis como contactos de emergencia."
   max_size: "500KB max"
+  height_width: "150x110"
   unknown: "Desconhecido"
   student_detail_step1: "Passo 1 - Detalhes do Estudante"
   last_course: "Ultimo curso frequentado"
