choose immediate contact from existing guardians from student profile
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@4008 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1840,6 +1840,7 @@ en: # locale
   sms_logs: "SMS Logs"
   view_all_messages: "View all messages and their status"
   enable_news_comment_moderation: "Enable News Comment Moderation"
+  choose_from_existing: "Choose from existing"
   
 
 #  modified timetable and timetable entries
