--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1841,6 +1841,10 @@ en: # locale
   view_all_messages: "View all messages and their status"
   enable_news_comment_moderation: "Enable News Comment Moderation"
   choose_from_existing: "Choose from existing"
+  assign_subject_amount: "Assign subject amount"
+  edit_subject_amount: "Edit "
+  discount_type: "Mode"
+  
   
 
 #  modified timetable and timetable entries
@@ -1988,6 +1992,10 @@ en: # locale
   is_final_exam: "Is Final Exam?"
   retaken: "Retaken"
   grouped_exam_reports_not_generated: "Grouped Exam Reports have not been generated for this Student."
+  enable_first_time_login: "Enable first time login change password."
+  first_login_attempt: "U have looged in for the first time in fedena.Please change your password"
+  not_applicable: "Not applicable"
+  password_update: "Password successfully updated"
   
   flash_msg1: "Updated additional exam group successfully."
   flash_msg2: "Sorry"
