--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1893,6 +1893,7 @@ en: # locale
   should_not_be_admin: "Should Not Be Admin"
   edit_current_tte_confirm: "This timetable is currently in use. Please remove the attendance related to the class timings of removing timetable entries before editing if subject-wise attendance is in use."
   multiple_entries: "Multiple entries"
+  hr_text: "HR"
 
   #exam updates
   ranking_levels_text: "Ranking Levels"
