fixed ##3801 [SMS to show whether leave taken is half day or full day]
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@4068 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2005,6 +2005,7 @@ en: # locale
   flash_msg5: "You are not allowed to view that information."
   flash_msg6: "Access denied!"
   flash_msg7: "is absent on"
+  flash_subject: "for the subject"
   flash_msg8: "Settings has been saved"
   flash_msg9: "Exam name can't be blank"
   flash_msg10: "New exam created successfully."
