translation text changed
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@4076 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -654,7 +654,7 @@ en: # locale
   fine: "Fine"
   fine_on: "Fine on"
   payment_done: "Payment Done"
-  partial_payment_on: "Partial Payment on"
+  partial_payment_on: "Payment done on"
   profile_text: "Profile"
   messages: "Messages"
   reminder_text: "Reminder"
