--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1844,6 +1844,7 @@ en: # locale
   assign_subject_amount: "Assign subject amount"
   edit_subject_amount: "Edit "
   discount_type: "Mode"
+  flash_period: "period"
   
   
 
