Fix bug with `translator` gem

--- a/config/locales/ch.yml
+++ b/config/locales/ch.yml
@@ -273,11 +273,54 @@ ch: # locale
       date_month: "%B %e"
 
 
-    day_names: [周日，周一，周二，周三，周四，周五，周六]
-    abbr_day_names: [周日，周一，周二，周三，周四，周五，周六]
-    month_names: [~, 一月，二月，三月，四月，五月，六月，七月，八月，九月，十月，十一月，十二月]
-    abbr_month_names: [~, 一月，二月，三月，四月，五月，六月，七月，八月，九月，十月，十一月，十二月]
-    order: [ :日, :月, :年 ]
+    day_names:
+      - 周日
+      - 周一
+      - 周二
+      - 周三
+      - 周四
+      - 周五
+      - 周六
+    abbr_day_names:
+      - 周日
+      - 周一
+      - 周二
+      - 周三
+      - 周四
+      - 周五
+      - 周六
+    month_names:
+      - ~
+      - 一月
+      - 二月
+      - 三月
+      - 四月
+      - 五月
+      - 六月
+      - 七月
+      - 八月
+      - 九月
+      - 十月
+      - 十一月
+      - 十二月
+    abbr_month_names:
+      - ~
+      - 一月
+      - 二月
+      - 三月
+      - 四月
+      - 五月
+      - 六月
+      - 七月
+      - 八月
+      - 九月
+      - 十月
+      - 十一月
+      - 十二月
+    order:
+      - :日
+      - :月
+      - :年
 
   time:
     formats:
