--- a/config/locales/gl.yml
+++ b/config/locales/gl.yml
@@ -273,11 +273,54 @@ gl: # locale
       date_month: "%B %e"
 
 
-    day_names: [Domingo, Luns, Martes, Mércores, Xoves, Venres, Sábado]
-    abbr_day_names: [Dom, Lu, Mar, Mér, Xo, Ven, Sá]
-    month_names: [~, Xaneiro, Febreiro, Marzo, Abril, Maio, Xuño, Xullo, Agosto, Setembro, Outubro, Novembro, Decembro]
-    abbr_month_names: [~, Xan, Feb, Mar, Abr, Maio, Xuño, Xullo, Ago, Set, Out, Nov, Dec]
-    order: [ :day, :month, :year ]
+    day_names:
+      - Domingo
+      - Luns
+      - Martes
+      - Mércores
+      - Xoves
+      - Venres
+      - Sábad
+    abbr_day_names:
+      - Dom
+      - Lu
+      - Mar
+      - Mér
+      - Xo
+      - Ven
+      - S
+    month_names:
+      - ~
+      - Xaneiro
+      - Febreiro
+      - Marzo
+      - Abril
+      - Maio
+      - Xuño
+      - Xullo
+      - Agosto
+      - Setembro
+      - Outubro
+      - Novembro
+      - Decembr
+    abbr_month_names:
+      - ~
+      - Xan
+      - Feb
+      - Mar
+      - Abr
+      - Maio
+      - Xuño
+      - Xullo
+      - Ago
+      - Set
+      - Out
+      - Nov
+      - De
+    order:
+      - :day
+      - :month
+      - :year
 
   time:
     formats:
