--- a/config/locales/mr.yml
+++ b/config/locales/mr.yml
@@ -273,11 +273,54 @@ mr: # locale
       date_month: "%B %e"
 
 
-    day_names: [रविवार, सोमवार, मंगळवार, बुधवार, गुरुवार, शुक्रवार, शनिवार]
-    abbr_day_names: [रवी, सोम, मंगळ, बुध, गुरु, शुक्र, शनी]
-    month_names: [~, जानेवारी, फेब्रुवारी, मार्च, एप्रिल, मे, जून, जुलै, ऑगस्ट, सप्टेंबर, ऑक्टोबर, नोव्हेंबर, डिसेंबर]
-    abbr_month_names: [~, जाने, फेब्रु, मार्च, एप्रिल, मे, जून, जुलै, ऑग, सप्टे, ऑक्टो, नोव्हे, डिसें]
-    order: [ :दिवस, :महिना, :वर्ष ]
+    day_names:
+      - रविवार
+      - सोमवार
+      - मंगळवार
+      - बुधवार
+      - गुरुवार
+      - शुक्रवार
+      - शनिवार
+    abbr_day_names:
+      - रवी
+      - सोम
+      - मंगळ
+      - बुध
+      - गुरु
+      - शुक्र
+      - शनी
+    month_names:
+      - ~
+      - जानेवारी
+      - फेब्रुवारी
+      - मार्च
+      - एप्रिल
+      - मे
+      - जून
+      - जुलै
+      - ऑगस्ट
+      - सप्टेंबर
+      - ऑक्टोबर
+      - नोव्हेंबर
+      - डिसेंबर
+    abbr_month_names:
+      - ~
+      - जाने
+      - फेब्रु
+      - मार्च
+      - एप्रिल
+      - मे
+      - जून
+      - जुलै
+      - ऑग
+      - सप्टे
+      - ऑक्टो
+      - नोव्हे
+      - डिसें
+    order:
+      - :दिवस
+      - :महिना
+      - :वर्ष
 
   time:
     formats:
