--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -148,7 +148,7 @@ vi: # locale
         title:  "tên gọi"
 
       apply_leave:
-        employee_leave_types_id: "Hình thức nghỉ việc"
+        employee_leave_type_id: "Hình thức nghỉ việc"
         start_date: "Ngày bắt đầu"
         end_date: "Ngày kết thúc"
         reason: "Lý do"
